# Playground

./: CMakeLists.txt
Attendance/: Attendance.cpp  CMakeLists.txt
BeautifulSubset/: BeautifulSubset.cpp  CMakeLists.txt
CompareVersion/: CMakeLists.txt  CompareVersion.cpp  CompareVersionX86.s
DistributeCoin/: CMakeLists.txt  DistributeCoin.cpp
Grumpy/: CMakeLists.txt  Grumpy.cpp
KSmallestFrac/: CMakeLists.txt  KSmallestFrac.c
Magnetic/: CMakeLists.txt  Magnetic.cpp
MaxGold/: CMakeLists.txt  MaxGold.cpp
MaxGraphSum/: CMakeLists.txt  MaxGraphSum.cpp
MaxProject/: CMakeLists.txt  MaxProject.cpp
MaxScoreWord/: CMakeLists.txt  MaxScoreWord.cpp
MaximumHappinessSum/: CMakeLists.txt  MaximumHappinessSum.c
MinCostWorker/: CMakeLists.txt  MinCostWorker.cpp
PalindromePartition/: CMakeLists.txt  PalindromePartition.cpp
RelativeRanks/: CMakeLists.txt  RelativeRanks.c  RelativeRanksX86.s
ReplaceRoot/: CMakeLists.txt  ReplaceRoot.cpp
SafestPath/: CMakeLists.txt  SafestPath.cpp
SubarraySum/: CMakeLists.txt  SubarraySum.cpp
SubsetXOR/: CMakeLists.txt  SubsetXOR.cpp
TripletXOR/: CMakeLists.txt  TripletXOR.cpp
WordBreak/: CMakeLists.txt  WordBreak.cpp
