cmake_minimum_required(VERSION 3.29)
project(Playground)
set(CMAKE_CXX_STANDARD 23)
enable_language(ASM)
add_subdirectory(CompareVersion)
add_subdirectory(RelativeRanks)
add_subdirectory(MaximumHappinessSum)
add_subdirectory(KSmallestFrac)
add_subdirectory(MinCostWorker)
add_subdirectory(MaxGold)
add_subdirectory(SafestPath)
add_subdirectory(DistributeCoin)
add_subdirectory(MaxGraphSum)
add_subdirectory(SubsetXOR)
add_subdirectory(PalindromePartition)
add_subdirectory(BeautifulSubset)
add_subdirectory(MaxScoreWord)
add_subdirectory(WordBreak)
add_subdirectory(Attendance)
add_subdirectory(TripletXOR)
add_subdirectory(ReplaceRoot)
add_subdirectory(SubarraySum)
add_subdirectory(MaxProject)
add_subdirectory(Magnetic)
add_subdirectory(Grumpy)